# huf_core_github_v1.1.8_no_inputs

./: .gitattributes  .gitignore  404.html  APPLY.md  CITATION.cff  CONTRIBUTING.md  HUF_SYSTEM_MANIFEST.json  LICENSE  Makefile  README.md  README.txt  README_TOP_SUGGESTION.md  START_HERE_MAC.command  START_HERE_WINDOWS.bat  index.html  index.md  mkdocs.yml  pyproject.toml  sitemap.xml  start_here_linux.sh
GET_STARTED/: README.md
The_Higgins_Unity_Framework/: index.html
_snippet_windows_no_heredoc/: index.html
books/: index.html
cases/: index.html
civic/: index.html
cli_huf_reference/: index.html
contributing/: index.html
data_sources/: index.html
demos/: README.md  collective_trace_report.csv
docs/: The_Higgins_Unity_Framework.md  cases.md  cli_huf_reference.md  contributing.md  data_sources.docx  data_sources.md  docs_inventory.md  ethics.md  field_guide.md  get_started_readme.md  get_started_zero_github.md  github_for_beginners.docx  github_for_beginners.md  gui_quickstart.docx  gui_quickstart.md  handbook.docx  handbook.md  huf_math_form_and_function.md  huf_reference.md  index.md  learning_path.md  markham_worked_example.md  planck.md  quick_run.md  reference_manual.docx  reference_manual.md  repo_hygiene.md  start_here.docx  start_here.md  theory_notes.md  traffic_phase_worked_example.md  troubleshooting.md  vector_db_coherence.md  vector_db_coherence_one_pager.md
docs_inventory/: index.html
ethics/: index.html
examples/: run_markham.py  run_planck.py  run_traffic.py
field_guide/: index.html
get_started_readme/: index.html
get_started_zero_github/: index.html
github_for_beginners/: index.html
gui_quickstart/: index.html
handbook/: index.html
huf_cases_markham_worked_example_overlay/: mkdocs.yml
huf_coherence/: README.md
huf_core/: __init__.py  adapters.py  cli.py  core.py  io.py  vector_db_adapter.py
huf_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
huf_math_form_and_function/: index.html
huf_reference/: index.html
huf_traffic_phase_worked_example_overlay/: mkdocs.yml
jupyter_demos/: index.html
learning/: index.html  learning_map.json
learning_path/: index.html
long_tail_accounting_lens/: index.html
markham_worked_example/: index.html
partners/: index.html
partnerships/: index.html
planck/: index.html
quick_run/: index.html
reference_manual/: index.html
repo_hygiene/: index.html
running_examples/: index.html
schemas/: trace_line_min.schema.json
science/: index.html
scripts/: __init__.py  apply_huf_headers.py  bootstrap.py  catalog_docs.py  cleanup_mkdocs_orphans.py  docs_hygiene.py  ensure_nav_entries.py  fetch_data.py  fix_readme_mojibake.ps1  inspect_markham_artifacts.py  (+10 more)
(+187 files in other folders)
