[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "huf-core"
version = "1.1.8"
description = "HUF Core: unity-budgeted hierarchy contract + artifact emission."
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

# Docs stack (pinned for reproducibility)
# Note: MkDocs 2.0 is (currently) pre-release and Material for MkDocs is not compatible.
docs = [
  "mkdocs==1.6.1",
  "mkdocs-material==9.7.2",
]

planck = ["astropy>=6.0"]

[project.scripts]
huf = "huf_core.cli:main"

# Ship ONLY the real Python package.
# Keep cases/docs/schemas/GET_STARTED/out in the repo, not in the pip package.
[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["huf_core*"]
exclude = [
  "cases*",
  "schemas*",
  "GET_STARTED*",
  "docs*",
  "tests*",
  "examples*",
  "scripts*",
  "out*",
]
